--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
         <link rel="stylesheet" type="text/css" href="index.css">
     </head>
     <body>
+        <canvas id="mycanvas"></canvas>
+        <section class="interface"></section>
 
         <script src="pixi.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
