--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     </head>
     <body>
         <canvas id="mycanvas"></canvas>
-        <section class="interface"></section>
-
+        <section id="interface">
+            <button id="test">test</button>
+        </section>
         <script src="pixi.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
         <script type="text/javascript" src="index.js"></script>
