--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <body>
         <canvas id="mycanvas"></canvas>
         <section id="interface">
+            <p id="instructions">Answer the math problms correctly to gain action. Use your actions to move or attack. Get to the door on the opposite side to go to the next level.</p>
+            <button id="readyButton">Ready</button>
+            
             
         </section>
         <script src="pixi.js"></script>
