--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <body>
         <canvas id="mycanvas"></canvas>
         <section id="interface">
-            <p id="instructions">Answer the math problms correctly to gain action. Use your actions to move or attack. If you get hit by an arrow you'll lose a life and start over.  Get to the door on the opposite side to go to the next level.</p>
+            <p id="instructions">Answer the math problems correctly to gain actions. Use your actions to move or attack. If you get hit by an arrow you'll lose a life and start over.  Get to the door on the opposite side to go to the next level.</p>
             <button id="readyButton">Ready</button>
-            
-            
         </section>
         <script src="pixi.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
