action counter finished

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             <p id="instructions">Answer the math problems correctly to gain actions. Use your actions to move or attack. If you get hit by an arrow you'll lose a life and start over.  Get to the door on the opposite side to go to the next level.</p>
             <button id="readyButton">Ready</button>
             <div id='actionCounter'>
+                You have 0 actions
             </div>
             <div id='equation'>
                 <span id='num1'></span>
