complete level animation

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body>
         <canvas id="mycanvas"></canvas>
         <section id="interface">
-            <p id="instructions">Answer the math problems correctly to gain actions. Use your actions to move or attack. If you get hit by an arrow you'll lose a life and start over.  Get to the door on the opposite side to go to the next level.</p>
+            <p id="instructions">Answer the math problems correctly to gain actions. Use your actions to move. If you get hit by an arrow you'll lose a life and start over.  Get to the door on the opposite side to go to the next level.</p>
             <button id="readyButton">Ready</button>
             <div id='actionCounter'>
                 Actions: 0
